# itchio

./: .gitignore  .pylintrc  LICENSE  Readme.md  pyproject.toml  upgrade_tree.sh
.github/workflows/: autopep8.yml  lint.yml  poetry-publish.yml
itchiodl/: __init__.py  bundle.py  game.py  library.py  login.py  utils.py
itchiodl/bundle_tool/: __main__.py
itchiodl/downloader/: __main__.py
src/itchio/: __init__.py  bundle.py  game.py  library.py  utils.py
src/itchio/bundle_tool/: __main__.py
src/itchio/downloader/: __main__.py
